syntax = "proto3";

package hedge.v1;
option go_package = "github.com/thepwagner/hedge";

import "google/protobuf/timestamp.proto";

// DebianRelease is metadata about a Debian version.
message DebianRelease {
  bool acquire_by_hash = 1;
  repeated string architectures = 2;
  string changelogs = 3;
  string codename = 4;
  repeated string components = 5;
  google.protobuf.Timestamp date = 6;
  string description = 7;
  string label = 8;
  bool no_support_for_architecture_all = 9;
  string origin = 10;
  string suite = 11;
  string version = 12;
  map<string,DigestedFile> digests = 13;
  string mirror_url = 14;
  string dist = 15;

  message DigestedFile {
    string path = 1;
    uint64 size = 2;
    bytes md5sum = 3;
    bytes sha256sum = 4;
  }
}

// DebianPackage is a .deb
message DebianPackage {
  string name = 1;
  string source = 2;
  string version = 3;
  uint64 installed_size = 4;
  string maintainer = 5;
  repeated string depends = 6;
  repeated string pre_depends = 7;
  repeated string recommends = 18;
  repeated string conflicts = 19;
  repeated string replaces = 20;
  repeated string suggests = 21;
  repeated string enhances = 22;
  repeated string breaks = 23;
  repeated string provides = 24;
  string section = 8;
  repeated string tags = 9;
  string description = 10;
  string homepage = 11;
  string priority = 12;
  string architecture = 13;
  string filename = 14;
  uint64 size = 15;
  string multiarch = 25;
  repeated string ruby_versions = 26;
  string python_version = 27;
  repeated string lua_versions = 31;
  bool essential = 28;
  bool important = 29;
  bool protected = 30;
  bytes md5sum = 16;
  bytes sha256 = 17;
}

// DebianPackages is a collection of DebianPackage
message DebianPackages {
  repeated DebianPackage packages = 1;
}
